fix contrast issue

--- a/css/style.css
+++ b/css/style.css
@@ -28,9 +28,8 @@ nav ul {
     padding: 1%;
 }
 
-nav a {
+a {
     color: #ffffff;
-    text-decoration: none;
     padding: 0.2%;
 }
 
